components/maas-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: maas-default-gateway
  namespace: openshift-ingress
  labels:
    istio.io/rev: openshift-gateway
  annotations:
    opendatahub.io/managed: "false"
    security.opendatahub.io/authorino-tls-bootstrap: "true"
spec:
  gatewayClassName: openshift-default

  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: maas-gateway-options

  listeners:
    - name: https
      hostname: replace-me.example.com
      port: 443
      protocol: HTTPS

      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: cert-manager-ingress-cert

      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              maas.opendatahub.io/gateway-access: "true"
