components/maas-gateway/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: maas-default-gateway
  namespace: openshift-ingress
  annotations:
    argocd.argoproj.io/sync-options: ServerSideApply=false
spec:
  host: replace-me.example.com

  to:
    kind: Service
    name: maas-default-gateway-openshift-default
    weight: 100

  port:
    targetPort: https

  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect

  wildcardPolicy: None
